Reload with time function add

--- a/index.html
+++ b/index.html
@@ -89,6 +89,23 @@
             <div class="col-1"></div>
             <div class="col-1"></div>
             <div class="col-1"></div>
+            <!-- 
+
+             -->
+            <div class="col-1"></div>
+            <div class="col-1"></div>
+            <div class="col-1"></div>
+            <div class="col-1"></div>
+            <div class="col-1"></div>
+            <div class="col-2 d-flex">
+                <button onclick="myStop()" class="btn-dark">Stop</button>
+            </div>
+            
+            <div class="col-1"></div>
+            <div class="col-1"></div>
+            <div class="col-1"></div>
+            <div class="col-1"></div>
+            <div class="col-1"></div>
 
             <div class="col-1"></div>
             <div class="col-1"></div>
@@ -102,20 +119,9 @@
             <div class="col-1"></div>
             <div class="col-1"></div>
             <div class="col-1"></div>
+            <!-- 
 
-            <div class="col-1"></div>
-            <div class="col-1"></div>
-            <div class="col-1"></div>
-            <div class="col-1"></div>
-            <div class="col-1"></div>
-            <div class="col-1"></div>
-            <div class="col-1"></div>
-            <div class="col-1"></div>
-            <div class="col-1"></div>
-            <div class="col-1"></div>
-            <div class="col-1"></div>
-            <div class="col-1"></div>
-
+             -->
             <div class="col-1"></div>
             <div class="col-1"></div>
             <div class="col-1"></div>
