--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <div class="col-1"></div>
             <div class="col-1"></div>
             <div class="col-2 d-flex">
-                <button onclick="myStop()" class="btn-dark">Stop</button>
+                <button onclick="myStop()" class="btn-dark">STOP</button>
             </div>
             
             <div class="col-1"></div>
